--- a/study/canvas/example/video-transparency/index.html
+++ b/study/canvas/example/video-transparency/index.html
@@ -9,18 +9,23 @@
     body {
       margin: 0;
       padding: 0;
-      background:orange;
+      /* background-color: orange; */
       font-family: arial, sans-serif;
     }
 
-    div {
-      display: flex;
+    video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 300px;
     }
+
 
     section {
-      display: inline-block;
+      position: fixed;
+      top: 0;
+      left: 0;
     }
-
 
     p {
       background: white;
@@ -29,29 +34,15 @@
 </head>
 
 <body>
-  <h1>HTML5 Video with alpha transparency</h1>
-
-  <p>
-    <a href="https://jakearchibald.com/scratch/alphavid/#" id="randomBg">Random background colour</a> - <a
-      href="https://jakearchibald.com/scratch/alphavid/#" id="stop">Stop</a> - <a
-      href="https://jakearchibald.com/scratch/alphavid/#" id="start">Start</a> - <a
-      href="https://jakearchibald.com/scratch/alphavid/#" id="toggleProcessing">Toggle Processing</a>
-  </p>
   <div>
-    <section>
-      <h1>video</h1>
+    <h1>video</h1>
+    <section class="canvas-area">
       <video id="video">
-        <source src="compressed.mp4" type="video/mp4; codecs=&quot;avc1.42E01E&quot;">
-        <source src="compressed.ogv" type="video/ogg; codecs=&quot;theora, vorbis&quot;">
+        <source src="ink2.mp4" type="video/mp4; codecs=&quot;avc1.42E01E&quot;">
+        <!-- <source src="compressed.ogv" type="video/ogg; codecs=&quot;theora, vorbis&quot;"> -->
       </video>
-    </section>
-    <section>
-      <h1>ori</h1>
-      <canvas width="480" height="488" id="buffer"></canvas>
-    </section>
-    <section>
-      <h1>alpha</h1>
-      <canvas width="480" height="488" id="output"></canvas>
+      <canvas id="buffer"></canvas>
+      <canvas id="output"></canvas>
     </section>
   </div>
   <script>
@@ -61,19 +52,21 @@
         bufferCanvas = document.getElementById('buffer'),
         buffer = bufferCanvas.getContext('2d'),
         video = document.getElementById('video'),
-        width = 480,
-        height = 488,
+        width = window.innerWidth,
+        height = window.innerHeight,
         interval;
+
+      var vWidth, vHeight, vRate;
 
       var isStarted = false;
 
       function processFrame() {
-        buffer.drawImage(video, 0, 0);
+        buffer.drawImage(video, 0, 0, width, height);
 
         // this can be done without alphaData, except in Firefox which doesn't like it when image is bigger than the canvas
         var image = buffer.getImageData(0, 0, width, height),
           imageData = image.data,
-          alphaData = buffer.getImageData(0, 244, width, height).data;
+          alphaData = buffer.getImageData(0, -0, width, height).data;
 
         for (var i = 3, len = imageData.length; i < len; i = i + 4) {
           imageData[i] = alphaData[i - 1];
@@ -81,12 +74,9 @@
         }
 
         // console.log(imageData, alphaData);
+        // buffer.globalCompositeOperation = 'destination-over';
 
-
-        // output.globalCompositeOperation = 'xor';
-
-
-        output.putImageData(image, 0, 0, 0, 0, width, height);
+        buffer.putImageData(image, 0, 0, 0, 0, width, height);
       }
 
       function randomColourVal() {
@@ -94,9 +84,11 @@
       }
 
       function setOpts() {
-        width = video.videoWidth;
-        height = video.videoHeight;
-        console.log(width);
+        vWidth = video.videoWidth;
+        vHeight = video.videoHeight;
+        vRate = vHeight / vWidth;
+        width = window.innerWidth;
+        height = window.innerWidth*vRate;
 
         outputCanvas.width = width;
         outputCanvas.height = Math.ceil(height / width * width);
@@ -106,9 +98,8 @@
 
       video.addEventListener('canplaythrough', function () {
         if (isStarted) return;
-        // setOpts();
+        setOpts();
         video.play();
-        // animate();
         isStarted = true;
       });
 
@@ -121,42 +112,6 @@
       video.addEventListener('ended', function () {
         video.play();
       }, false);
-
-      document.getElementById('randomBg').addEventListener('click', function (event) {
-        document.body.style.backgroundColor = 'rgb(' + randomColourVal() + ',' + randomColourVal() + ',' +
-          randomColourVal() + ')';
-        event.preventDefault();
-      }, false);
-
-      document.getElementById('start').addEventListener('click', function (event) {
-        video.play();
-        event.preventDefault();
-      }, false);
-
-      document.getElementById('stop').addEventListener('click', function (event) {
-        video.pause();
-        clearInterval(interval);
-        event.preventDefault();
-      }, false);
-
-      document.getElementById('toggleProcessing').addEventListener('click', function (event) {
-        var toShow = video,
-          toHide = outputCanvas;
-
-        if (video.style.display == 'block') {
-          toShow = outputCanvas;
-          toHide = video;
-        }
-
-        toShow.style.display = 'block';
-        toHide.style.display = 'none';
-
-        event.preventDefault();
-      }, false);
-
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost +
-        "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
     })();
   </script>
   <script src="./ga.js" type="text/javascript"></script>
