--- a/study/canvas/canvas-transparent/index2.html
+++ b/study/canvas/canvas-transparent/index2.html
@@ -66,14 +66,15 @@
   <div class="bland-test__video">
     <video id="testVideo" autoplay playsinline muted oncontextmenu="return false;" loop>
       <!-- <source src="https://images.samsung.com/is/content/samsung/p5/sec/home/2020/p6/kv/0428/0428_BESPOKE_video_PC_1920_810.mp4" type="video/mp4"> -->
-      <source src="./video/0428_BESPOKE_video_PC_1920_810.mp4" type="video/mp4">
+      <!-- <source src="./video/0428_BESPOKE_video_PC_1920_810.mp4" type="video/mp4"> -->
+      <source src="./video/CHROMA_KEY_THANOS.mp4" type="video/mp4">
     </video>
   </div>
   <div class="bland-test__container">
     <canvas id="testCanvas"></canvas>
     <canvas id="testCanvasGra" class="gra"></canvas>
   </div>
-
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
   <script src="./index2.js"></script>
 </body>
 
