--- a/study/inflearn/apple-clone/index.html
+++ b/study/inflearn/apple-clone/index.html
@@ -10,11 +10,11 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body class="before-load">
-	<div class="loading">
+	<!-- <div class="loading">
 		<svg class="loading-circle">
 			<circle cx="50%" cy="50%" r="25"></circle>
 		</svg>
-	</div>
+	</div> -->
 	<div class="container">
 		<nav class="global-nav">
 			<div class="global-nav-links">
@@ -95,6 +95,7 @@
 		</footer>
 	</div>
 
+	<script src="js/common.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
