--- a/study/inflearn/apple-clone/videotest/03-canvas-2.html
+++ b/study/inflearn/apple-clone/videotest/03-canvas-2.html
@@ -51,6 +51,7 @@
 		}
 
 		function loop() {
+      console.log('??', pageYOffset);
 			progress = pageYOffset / (document.body.offsetHeight - window.innerHeight);
 			if (progress < 0) progress = 0;
 			if (progress > 1) progress = 1;
