--- a/study/inflearn/apple-clone/videotest/02-image.html
+++ b/study/inflearn/apple-clone/videotest/02-image.html
@@ -28,7 +28,8 @@
 
 	<script>
 		const imgElem = document.querySelector('.sample-img');
-		const videoImages = [];
+    const videoImages = [];
+    let loadedImagesCount = 0;
 		let totalImagesCount = 960;
 		let progress;
 		let currentFrame;
@@ -37,7 +38,7 @@
 			for (let i = 0; i < totalImagesCount; i++) {
 				let imgElem = new Image();
 				imgElem.src = `../video/002/IMG_${7027 + i}.JPG`;
-				videoImages.push(imgElem);
+        videoImages.push(imgElem);
 			}
 		}
 
@@ -50,13 +51,14 @@
 				if (progress > 1) progress = 1;
 
 				requestAnimationFrame(function () {
+          console.log('???');
 					currentFrame = Math.round((totalImagesCount - 1) * progress);
 					imgElem.src = videoImages[currentFrame].src;
 				});
 			});
 		}
 
-		window.addEventListener('load', init);
+		window.addEventListener('load', init);  // 문서에서 사용하는 asset load
 		setImages();
 	</script>
 </body>
