--- a/study/inflearn/apple-clone/index.html
+++ b/study/inflearn/apple-clone/index.html
@@ -83,7 +83,7 @@
 			<p class="mid-message">
 				<strong>Retina 머그</strong><br>
 				아이디어를 광활하게 펼칠<br>
-				아름답고 부드러운 음료 공간.
+				부드러운 음료 공간.
 			</p>
 			<canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
 			<p class="canvas-caption">
