--- a/study/inflearn/apple-clone/index.html
+++ b/study/inflearn/apple-clone/index.html
@@ -10,11 +10,12 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body class="before-load">
-	<!-- <div class="loading">
+	<div class="loading">
 		<svg class="loading-circle">
+			<!-- 가운데 위치하며 반지름은 25 -->
 			<circle cx="50%" cy="50%" r="25"></circle>
 		</svg>
-	</div> -->
+	</div>
 	<div class="container">
 		<nav class="global-nav">
 			<div class="global-nav-links">
