--- a/study/inflearn/apple-clone/index.html
+++ b/study/inflearn/apple-clone/index.html
@@ -91,6 +91,12 @@
 				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et, ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
 			</p>
 		</section>
+		<section class="normal-content">
+			<p class="mid-message">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam consequuntur dolore amet eaque rerum. Earum laudantium aliquam, minima iste reprehenderit nihil magni beatae ab animi nobis cumque cum accusantium provident ad iure, reiciendis explicabo saepe deleniti odit consequuntur aspernatur. Quasi corrupti optio mollitia architecto, a reprehenderit nulla autem aut, fugiat ipsam illum esse tenetur nisi. Libero placeat, atque harum eligendi perspiciatis quia nisi? Officia perferendis voluptatem, aperiam maiores corrupti minima modi, sapiente praesentium, fugiat quaerat nihil! Quaerat, ea aliquam veniam ipsum corrupti doloremque explicabo exercitationem, quae, repudiandae eum possimus. Libero repellendus corporis culpa nulla eos nihil consectetur velit maxime odio.</p>
+		</section>
+		<section class="normal-content">
+			<p class="mid-message">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam consequuntur dolore amet eaque rerum. Earum laudantium aliquam, minima iste reprehenderit nihil magni beatae ab animi nobis cumque cum accusantium provident ad iure, reiciendis explicabo saepe deleniti odit consequuntur aspernatur. Quasi corrupti optio mollitia architecto, a reprehenderit nulla autem aut, fugiat ipsam illum esse tenetur nisi. Libero placeat, atque harum eligendi perspiciatis quia nisi? Officia perferendis voluptatem, aperiam maiores corrupti minima modi, sapiente praesentium, fugiat quaerat nihil! Quaerat, ea aliquam veniam ipsum corrupti doloremque explicabo exercitationem, quae, repudiandae eum possimus. Libero repellendus corporis culpa nulla eos nihil consectetur velit maxime odio.</p>
+		</section>
 		<footer class="footer">
 			2020, 1분코딩
 		</footer>
